@@ -15,6 +15,7 @@ import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
 import io.camunda.zeebe.model.bpmn.builder.CallActivityBuilder;
 import io.camunda.zeebe.model.bpmn.builder.ServiceTaskBuilder;
+import io.camunda.zeebe.model.bpmn.instance.zeebe.ZeebeBindingType;
 import io.camunda.zeebe.protocol.record.Assertions;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.RejectionType;
@@ -73,20 +74,13 @@ public final class CallActivityTest {
   @Before
   public void init() {
     jobType = helper.getJobType();
-
-    final var parentProcess = parentProcess(CallActivityBuilder::done);
-
-    final var childProcess = childProcess(jobType, ServiceTaskBuilder::done);
-
-    ENGINE
-        .deployment()
-        .withXmlResource("wf-parent.bpmn", parentProcess)
-        .withXmlResource("wf-child.bpmn", childProcess)
-        .deploy();
   }
 
   @Test
   public void shouldActivateCallActivity() {
+    // given
+    deployDefaultParentAndChildProcess();
+
     // when
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
@@ -107,6 +101,9 @@ public final class CallActivityTest {
 
   @Test
   public void shouldCreateInstanceOfCalledElement() {
+    // given
+    deployDefaultParentAndChildProcess();
+
     // when
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
@@ -127,14 +124,21 @@ public final class CallActivityTest {
   }
 
   @Test
-  public void shouldCreateInstanceOfLatestVersionOfCalledElement() {
+  public void shouldCreateInstanceOfLatestVersionOfCalledElementIfBindingTypeNotSet() {
     // given
-    final var processChildV2 =
+    final var parentProcess = parentProcess(CallActivityBuilder::done);
+    final var childProcessV1 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v1").endEvent().done();
+    final var childProcessV2 =
         Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v2").endEvent().done();
-
-    final var secondDeployment =
-        ENGINE.deployment().withXmlResource("wf-child.bpmn", processChildV2).deploy();
-    final var secondVersion = secondDeployment.getValue().getProcessesMetadata().get(0);
+    ENGINE
+        .deployment()
+        .withXmlResource("wf-parent.bpmn", parentProcess)
+        .withXmlResource("wf-child.bpmn", childProcessV1)
+        .deploy();
+    final var deployment =
+        ENGINE.deployment().withXmlResource("wf-child.bpmn", childProcessV2).deploy();
+    final var latestDeployedVersion = deployment.getValue().getProcessesMetadata().getFirst();
 
     // when
     final var processInstanceKey =
@@ -142,12 +146,75 @@ public final class CallActivityTest {
 
     // then
     Assertions.assertThat(getChildInstanceOf(processInstanceKey))
-        .hasVersion(secondVersion.getVersion())
-        .hasProcessDefinitionKey(secondVersion.getProcessDefinitionKey());
+        .hasVersion(latestDeployedVersion.getVersion())
+        .hasProcessDefinitionKey(latestDeployedVersion.getProcessDefinitionKey());
+  }
+
+  @Test
+  public void shouldCreateInstanceOfLatestVersionOfCalledElementForBindingTypeLatest() {
+    // given
+    final var parentProcess =
+        parentProcess(builder -> builder.zeebeBindingType(ZeebeBindingType.latest));
+    final var childProcessV1 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v1").endEvent().done();
+    final var childProcessV2 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v2").endEvent().done();
+    ENGINE
+        .deployment()
+        .withXmlResource("wf-parent.bpmn", parentProcess)
+        .withXmlResource("wf-child.bpmn", childProcessV1)
+        .deploy();
+    final var deployment =
+        ENGINE.deployment().withXmlResource("wf-child.bpmn", childProcessV2).deploy();
+    final var latestDeployedVersion = deployment.getValue().getProcessesMetadata().getFirst();
+
+    // when
+    final var processInstanceKey =
+        ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
+
+    // then
+    Assertions.assertThat(getChildInstanceOf(processInstanceKey))
+        .hasVersion(latestDeployedVersion.getVersion())
+        .hasProcessDefinitionKey(latestDeployedVersion.getProcessDefinitionKey());
+  }
+
+  @Test
+  public void shouldCreateInstanceOfVersionInSameDeploymentForBindingTypeDeployment() {
+    // given
+    final var parentProcess =
+        parentProcess(builder -> builder.zeebeBindingType(ZeebeBindingType.deployment));
+    final var childProcessV1 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v1").endEvent().done();
+    final var childProcessV2 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v2").endEvent().done();
+    final var deployment =
+        ENGINE
+            .deployment()
+            .withXmlResource("wf-parent.bpmn", parentProcess)
+            .withXmlResource("wf-child.bpmn", childProcessV1)
+            .deploy();
+    final var versionInSameDeployment =
+        deployment.getValue().getProcessesMetadata().stream()
+            .filter(metadata -> PROCESS_ID_CHILD.equals(metadata.getBpmnProcessId()))
+            .findFirst()
+            .orElseThrow();
+    ENGINE.deployment().withXmlResource("wf-child.bpmn", childProcessV2).deploy();
+
+    // when
+    final var processInstanceKey =
+        ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
+
+    // then
+    Assertions.assertThat(getChildInstanceOf(processInstanceKey))
+        .hasVersion(versionInSameDeployment.getVersion())
+        .hasProcessDefinitionKey(versionInSameDeployment.getProcessDefinitionKey());
   }
 
   @Test
   public void shouldHaveReferenceToParentInstance() {
+    // given
+    deployDefaultParentAndChildProcess();
+
     // when
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
@@ -169,6 +236,9 @@ public final class CallActivityTest {
 
   @Test
   public void shouldCompleteCallActivity() {
+    // given
+    deployDefaultParentAndChildProcess();
+
     // when
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
@@ -194,6 +264,9 @@ public final class CallActivityTest {
 
   @Test
   public void shouldCopyVariablesToChild() {
+    // given
+    deployDefaultParentAndChildProcess();
+
     // when
     final var processInstanceKey =
         ENGINE
@@ -223,6 +296,7 @@ public final class CallActivityTest {
   @Test
   public void shouldPropagateVariablesToParent() {
     // given
+    deployDefaultParentAndChildProcess();
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
 
@@ -247,6 +321,7 @@ public final class CallActivityTest {
         .deployment()
         .withXmlResource(
             "wf-parent.bpmn", parentProcess(c -> c.zeebePropagateAllChildVariables(false)))
+        .withXmlResource("wf-child.bpmn", childProcess(jobType, ServiceTaskBuilder::done))
         .deploy();
 
     final var processInstanceKey =
@@ -394,6 +469,7 @@ public final class CallActivityTest {
             "wf-parent.bpmn",
             parentProcess(
                 c -> c.zeebePropagateAllChildVariables(false).zeebeOutputExpression("x", "y")))
+        .withXmlResource("wf-child.bpmn", childProcess(jobType, ServiceTaskBuilder::done))
         .deploy();
 
     final var processInstanceKey =
@@ -425,6 +501,7 @@ public final class CallActivityTest {
             "wf-parent.bpmn",
             parentProcess(
                 c -> c.zeebePropagateAllChildVariables(true).zeebeOutputExpression("x", "x")))
+        .withXmlResource("wf-child.bpmn", childProcess(jobType, ServiceTaskBuilder::done))
         .deploy();
 
     final var processInstanceKey =
@@ -474,6 +551,46 @@ public final class CallActivityTest {
   }
 
   @Test
+  public void shouldCreateInstanceOfCalledElementWithExpressionAndBindingTypeDeployment() {
+    // given
+    final var childProcessV1 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v1").endEvent().done();
+    final var childProcessV2 =
+        Bpmn.createExecutableProcess(PROCESS_ID_CHILD).startEvent("v2").endEvent().done();
+    final var deployment =
+        ENGINE
+            .deployment()
+            .withXmlResource(
+                "wf-parent.bpmn",
+                parentProcess(
+                    callActivity ->
+                        callActivity
+                            .zeebeProcessIdExpression("processId")
+                            .zeebeBindingType(ZeebeBindingType.deployment)))
+            .withXmlResource("wf-child.bpmn", childProcessV1)
+            .deploy();
+    final var versionInSameDeployment =
+        deployment.getValue().getProcessesMetadata().stream()
+            .filter(metadata -> PROCESS_ID_CHILD.equals(metadata.getBpmnProcessId()))
+            .findFirst()
+            .orElseThrow();
+    ENGINE.deployment().withXmlResource("wf-child.bpmn", childProcessV2).deploy();
+
+    // when
+    final var processInstanceKey =
+        ENGINE
+            .processInstance()
+            .ofBpmnProcessId(PROCESS_ID_PARENT)
+            .withVariable("processId", PROCESS_ID_CHILD)
+            .create();
+
+    // then
+    Assertions.assertThat(getChildInstanceOf(processInstanceKey))
+        .hasBpmnProcessId(PROCESS_ID_CHILD)
+        .hasProcessDefinitionKey(versionInSameDeployment.getProcessDefinitionKey());
+  }
+
+  @Test
   public void shouldTriggerBoundaryEvent() {
     // given
     ENGINE
@@ -486,6 +603,7 @@ public final class CallActivityTest {
                         .boundaryEvent(
                             "timeout", b -> b.cancelActivity(true).timerWithDuration("PT0.1S"))
                         .endEvent()))
+        .withXmlResource("wf-child.bpmn", childProcess(jobType, ServiceTaskBuilder::done))
         .deploy();
 
     // when
@@ -513,6 +631,7 @@ public final class CallActivityTest {
   @Test
   public void shouldTerminateChildInstance() {
     // given
+    deployDefaultParentAndChildProcess();
     final var processInstanceKey =
         ENGINE.processInstance().ofBpmnProcessId(PROCESS_ID_PARENT).create();
 
@@ -548,6 +667,7 @@ public final class CallActivityTest {
         .withXmlResource(
             "wf-parent.bpmn",
             parentProcess(c -> c.zeebeOutputExpression("assert(x, x != null)", "y")))
+        .withXmlResource("wf-child.bpmn", childProcess(jobType, ServiceTaskBuilder::done))
         .deploy();
 
     final var processInstanceKey =
@@ -852,6 +972,18 @@ public final class CallActivityTest {
             parentInstance.getProcessDefinitionKey(),
             childInstance.getProcessDefinitionKey())
         .hasOnlyCallingElementPath(ca1Index, ca2Index);
+  }
+
+  private void deployDefaultParentAndChildProcess() {
+    final var parentProcess = parentProcess(CallActivityBuilder::done);
+
+    final var childProcess = childProcess(jobType, ServiceTaskBuilder::done);
+
+    ENGINE
+        .deployment()
+        .withXmlResource("wf-parent.bpmn", parentProcess)
+        .withXmlResource("wf-child.bpmn", childProcess)
+        .deploy();
   }
 
   private static ProcessInstanceRecordValue getProcessInstanceRecordValue(
